2017-03-22:
- initial release "smallest hybris launcher"