@@ -1,2 +1,6 @@
+2018-12-23:
+- changed license to BSD 2-Clause
+- enhanced README
+
 2017-03-22:
 - initial release "smallest hybris launcher"
